# unhosted-core

./: .dockerignore  .gitignore  ACCEPTABLE_USE.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IP_POSTURE.md  MANIFESTO.md  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  TERMS.md  THIRD_PARTY_NOTICES.md  USE_CASES.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: check-spec.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/profile/: README.md
.github/scripts/: build-updater-manifest.py
.github/workflows/: docker.yml  pages.yml  release.yml  rust.yml  smoke-release.yml
assets/screenshots/: README.md
branding/: README.md
branding/colors/: palette.css
crates/unhosted-agent/: Cargo.toml
crates/unhosted-agent/src/: agent.rs  agent_fs.rs  chats.rs  critique.rs  lib.rs  memory.rs  persona.rs  voice.rs
crates/unhosted-cli/: Cargo.toml
crates/unhosted-cli/src/: main.rs
crates/unhosted-core/: Cargo.toml
crates/unhosted-core-base/: Cargo.toml
crates/unhosted-core-base/src/: dlp.rs  lib.rs  metrics.rs  web_fetch.rs
crates/unhosted-core/src/: agent.rs  agent_fs.rs  audit.rs  auth.rs  chats.rs  connectors.rs  discovery.rs  dlp.rs  identity.rs  lib.rs  lightning_cfg.rs  memory.rs  metrics.rs  model_manager.rs  paths.rs  peer.rs  public_mode.rs  relay_client.rs  router.rs  swarm.rs  transport.rs  tunnel.rs  update_check.rs  upstream.rs  vram_pool.rs  web.rs  web_fetch.rs
crates/unhosted-core/web/: index.html  manifest.json  sw.js  ui.css  ui.js
crates/unhosted-desktop/: Cargo.toml  Info.plist  tauri.conf.json
crates/unhosted-desktop/capabilities/: default.json
crates/unhosted-desktop/icons/: icon.icns
crates/unhosted-desktop/src/: main.rs
crates/unhosted-relay/: Cargo.toml
crates/unhosted-relay/src/: main.rs
design/: 0001-public-mode-architecture.md  0002-application-frontends.md  0003-two-node-lan-cluster.md  0004-trusted-mode.md  0005-relay-and-connection-topology.md  0006-public-mode-onboarding-and-wallet.md  0007-security-hardening.md  0008-quic-peer-transport.md  0009-vram-pooling.md  0009-vram-pooling.tap-formula-draft.rb  0010-custom-llm-pipeline.md  0012-agent-runtime.md  0013-agent-tool-read-file.md  0014-swarm-model-distribution.md  README.md  TEMPLATE.md
docs/: 404.html  DEVELOPMENT.md  README.md  docs.html  index.html  motion.js  style.css  theme.js
docs/branding/: README.md
docs/upstream/: README.md  homebrew-core-llama-cpp-rpc.md  llama-cpp-rms-norm-blas.md
models/distill/: .gitignore  QUICKSTART.md  README.md  eval.py  export_gguf.py  from_hf.py  gen_data.py  model-card.template.md  pipeline.py  push_to_hub.py  requirements.txt  run_heldout_eval.py  setup.sh  train.py
models/distill/eval/: base-8b-judging.txt  base-judging.txt  base-qwen3-4b-768.jsonl  base-qwen3-4b.jsonl  base-qwen3-8b-768.jsonl  base-qwen3-8b-nothink.jsonl  base8b-nothink-judging.txt  bf16-8b-judging.txt  eval_heldout_v1.jsonl  final-standings-2026-07-01.md  gap-report-v0.1.md  helmsman-4b-v0.1-judgment.md  helmsman-4b-v0.1.jsonl  helmsman-4b-v0.2-judgment.md  helmsman-4b-v0.2.jsonl  helmsman-4b-v0.3-final.jsonl  helmsman-4b-v0.3-mlxr16.jsonl  helmsman-4b-v0.3.jsonl  helmsman-4b-v03-judgment.md  helmsman-8b-bf16.jsonl  helmsman-8b-t1-judgment.md  helmsman-8b-t2.jsonl  helmsman-8b-v0.2.jsonl  helmsman-judging.txt  release-provenance-assessment.md  t2-8b-judging.txt  v02-8b-judging.txt  v02-judging.txt  v03-final-verdict.md  v03-judging.txt  v03f-judging.txt  v03r16-judging.txt
models/llm-lab/: .gitignore  README.md  llm_lab.py  pyproject.toml
runs/: .gitignore
runs/2026-05-19-unhosted-qa-v1/: notes.md  run_eval.py
runs/2026-05-20-vrampool-loopback/: notes.md
scripts/: build-app-icons.sh  build-dmg.sh  build-rasters.sh  bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1  install.ps1  install.sh  new-spec.sh  release-macos.sh  screenshots.sh  shotter  shotter.swift  start-llama.sh  unhosted.desktop  unhosted.service
scripts/git-hooks/: pre-commit
