[workspace]
resolver = "2"
members = ["crates/unhosted-core", "crates/unhosted-cli", "crates/unhosted-desktop", "crates/unhosted-relay"]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/unhosted-ai/unhosted"
authors = ["Unhosted contributors"]
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
rust-embed = { version = "8", features = ["axum", "interpolate-folder-path"] }
mime_guess = "2"
tao = "0.31"
wry = "0.48"
mdns-sd = "0.13"
hostname = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
