[package]
name = "unhosted-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line interface for Unhosted."

[[bin]]
name = "unhosted"
path = "src/main.rs"

[dependencies]
unhosted-core = { path = "../unhosted-core" }
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
