[package]
name = "unhosted-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core orchestration and inference engine for Unhosted."

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
mdns-sd.workspace = true
hostname.workspace = true
