[package]
name = "unhosted-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core orchestration and inference engine for Unhosted."

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
mdns-sd.workspace = true
hostname.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
# Text embeddings for private-memory phase-3 retrieval. Default-features
# off to drop the `image-models` bag (pulls the `image` crate; we only
# embed text). `hf-hub-native-tls` is what fetches the ~33 MB
# `bge-small-en-v1.5` ONNX model from Hugging Face on first init, cached
# under `~/.cache/fastembed` so subsequent boots are instant.
# `ort-download-binaries-native-tls` ships the ONNX Runtime shared lib
# alongside our binary — important because the user shouldn't have to
# install onnxruntime by hand to use private memory.
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
unhosted-payments-core.workspace = true
# Lightning rail adapter (LND REST). Pulled in only when the daemon is
# built with `--features rail-lightning` — the default binary still
# contains zero rail-specific code, per ADR-0011's "no rail in the
# default build" rule.
unhosted-payments-lightning = { workspace = true, optional = true }

[features]
default = []
# Compile in the LightningAdapter and register it at startup when the
# operator has a `~/.config/unhosted/lightning.toml` config file. With
# the feature off, Lightning quotes return Rejected("rail lightning
# not configured on this host") — same as before this slice.
rail-lightning = ["dep:unhosted-payments-lightning"]

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
