[package]
name = "unhosted-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rendezvous + relay service for the Unhosted trusted-peer network."

[[bin]]
name = "unhosted-relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
rand.workspace = true
